--- a/static/css/cmua.css
+++ b/static/css/cmua.css
@@ -15,22 +15,23 @@ a:hover{color: #FFCC00;}
  
 p{}
 input{font-size: 12px; border: 1px solid #FFAAAA; padding: 2px; width: 150px;}
+textarea{font-size: 12px; border: 1px solid #FFAAAA; padding: 2px; }
  
  #container{width: 860px; margin: 0px auto;}
- #header{width: 860px; height: 200px; background: url('../images/header.jpg') no-repeat;}
+ #header{width: 860px; height: 200px; background: url(/static/images/header.jpg) no-repeat;}
  #navigation{margin: 0px auto; width: 610px; float: right; height: 75px; display: block}
 		  
   #nav{position: relative; top: 0px; left: 10px; padding: 0px; list-style: none; width: 600px;}
   #nav li{float: left; display: block; position: relative; width: 100px; margin-left: 35px;}
   #nav li a.on{display: block; height: 50px; padding: 0 !important;}
   #nav li a.on strong{display: none;}
-    	  li#events a.on {background: transparent url(../images/nav-e.jpg) top left no-repeat;}
+    	  li#events a.on {background: transparent url(/static/images/nav-e.jpg) top left no-repeat;}
 		  li#events a.on:hover {background-position: bottom left;}     
-		  li#leagues a.on {background: transparent url(../images/nav-l.jpg) top left no-repeat;}
+		  li#leagues a.on {background: transparent url(/static/images/nav-l.jpg) top left no-repeat;}
 		  li#leagues a.on:hover {background-position: bottom left;}
-		  li#directions a.on {background: transparent url(../images/nav-d.jpg) top left no-repeat;}
+		  li#directions a.on {background: transparent url(/static/images/nav-d.jpg) top left no-repeat;}
 		  li#directions a.on:hover {background-position: bottom left;} 
-		  li#links a.on {background: transparent url(../images/nav-li.jpg) top left no-repeat;}
+		  li#links a.on {background: transparent url(/static/images/nav-li.jpg) top left no-repeat;}
 		  li#links a.on:hover {background-position: bottom left;}
 		     
 #top{float: left; width: 860px; background: url('../images/top.jpg') no-repeat; height: 50px;}
@@ -40,7 +41,7 @@ input{font-size: 12px; border: 1px solid #FFAAAA; padding: 2px; width: 150px;}
 
 #logo{float: left; width: 250px; height: 150px;}
 	#logo a{position: relative; left: 20px; top:0px; display: block; 
-		width: 200px; height:100px; padding: 0 !important; background:  url(../images/cmualogo.jpg) no-repeat;}
+		width: 200px; height:100px; padding: 0 !important; background:  url(/static/images/cmualogo.jpg) no-repeat;}
 	#logo h1{margin: 0;}
 	#logo h1 strong{display: none;}
 
