first cut at new year's app form

--- a/cmua/templates/register/index.html
+++ b/cmua/templates/register/index.html
@@ -9,9 +9,8 @@
       <span class="errorlist">There were errors submitting your information; see below</span>
     {% endif %}
     <p>
-The Central Maryland Ultimate Association (CMUA) will be offering two 
-separate leagues this summer.  Both will be co-ed and both will be open to all 
-skill levels.  Participate in one or both leagues for the same price ($20.00).<br>
+The Central Maryland Ultimate Association (CMUA) will be offering three 
+separate leagues this summer.  Two will be co-ed and the third will be a new gender-blind Open league.  All leagues are open to all skill levels. Participate in one or two or all of the leagues for the same price ($20.00).<br>
 <h4>The Monday Night League - Our classic Co-ed summer league</h4>
 <ul><li>Who:
     <ul><li>Adult Ultimate players of all skill levels and genders are invited to play.  There is limited space for both men and women in this league, so be sure to sign up early!
@@ -21,14 +20,14 @@ skill levels.  Participate in one or both leagues for the same price ($20.00).<b
     <li> A 16 team mixed format league.
     <li> Teams are formed via a draft of all the registered players by volunteer captains.
     <li> The mixed format for this league is 5/2 or 4/3 - offense chooses.
-    <li> Two rounds are played every Monday night; plus each team will play one triple header during the regular season.
+    <li> Two rounds are played every Monday night.
     </ul>
 <li>Where:
-    <ul><li> Regular season games are played at fields in the Catonsville area. 
-    <li> Playoff games are also played in Catonsville, but some games will be played elsewhere (typically in Lansdowne and Columbia) in order to provide lighted fields for all games.</ul>
+    <ul><li> Regular season games are played at fields in the Catonsville, Woodlawn, and Lansdowne areas.
+    <li> Playoff games are also played in the same areas, but some games may be played farther afield (e.g. Columbia) in order to provide lighted fields for all games.
 <li>When:
     <ul> 
-    <li> Registration is held during the month of May.  The Deadline is May 24, but this league always fills up prior to the deadline!
+    <li> Registration is held during the month of May.  The Deadline is May 27, but this league always fills up prior to the deadline!
     <li> Games are played from June to mid-August. 
     <li> First round games are scheduled to start at 6:30 PM and the last round typically ends around 9 PM.  Longer rounds are played on fields with lights; hence plan on playing till 10 PM on those evenings.
     </ul>
@@ -50,7 +49,7 @@ skill levels.  Participate in one or both leagues for the same price ($20.00).<b
     <li> An 8 to 10 team modified-mixed format league.
     <li> Teams are formed via a two part process:
         <ul>
-        <li> A clique of up to 5 players is formed prior to the draft.  (Someone from the clique must notify the league commissioner of their intent to create a team by the sign up deadline of May 24.)
+        <li> A clique of up to 7 players is formed prior to the draft.  (Someone from the clique must notify the league commissioner of their intent to create a team by the sign up deadline of May 27.)
         <li> A leader from the clique attends the draft and picks the rest of the team.
         </ul>
     <li> The mixed format for this league is determined at game time each week and is based on the number of women in attendance that evening.
@@ -62,11 +61,44 @@ skill levels.  Participate in one or both leagues for the same price ($20.00).<b
     </ul>
 <li> When: 
     <ul>
-    <li> Registration is held during the month of May.  The Deadline is May 24.
-    <li> Games are played from June to mid-August. 
+    <li> Registration is held during the month of May.  The Deadline is May 27.
+    <li> Games are played from June to early-August. 
     <li> Games are scheduled to start at 6:30 PM and typically take two hours to play.
     </ul>
 </ul>
+
+
+<h4>The Thursday Night League - AKA The Open League.</h4>
+<ul> 
+<li>Who:
+    <ul>
+    <li> Adult Ultimate players of all skill levels and genders are invited to play in this new gender-blind league.  
+    <li> All players must sign up individually and be computer-drafted onto (hopefully) balanced teams.
+    <li> Underage players may sign up only if they have a sponsor in the league. See the "Under 18?" paragraph below for details.
+    </ul>
+<li>What:
+    <ul>
+    <li> A 4 to 6 team Open format league. “Open format” typically translates into “Men’s league,” but women are welcomed to join as long as they are willing to match up against anyone (male or female) on the other team.
+    <li> Teams are formed via a two part process:
+        <ul>
+        <li> A computer will be used to perform the initial draft based on the self ratings provided on the registration forms.
+        <li> A committee will review the draft and correct any obvious imbalances.
+        <li> One lengthy game is played each week, but an occasional double header may be required in order to make up a rained out game.
+        </ul>
+    </ul>
+<li>Where:
+    <ul>
+    <li>All games are played at fields in the Catonsville area.
+    </ul>
+<li>When:
+    <ul>
+    <li>Registration is held during the month of May. The Deadline is May 27.
+    <li>Games are played from June to early-August.
+    <li> Games are scheduled to start at 6:30 PM and typically take two hours to play.
+    </ul>
+</ul>
+
+<h4>Registration Information:</h4>
 
 <strong>To register</strong>: simply fill out this form and click "submit registration".
 The next page will tell you how to pay either online or by check.<br><br>
