some more registration template fixes

--- a/cmua/templates/register/index.html
+++ b/cmua/templates/register/index.html
@@ -12,19 +12,24 @@
 The Central Maryland Ultimate Association (CMUA) will be offering three 
 separate leagues this summer.  Two will be co-ed and the third will be a new gender-blind Open league.  All leagues are open to all skill levels. Participate in one or two or all of the leagues for the same price ($20.00).<br>
 <h4>The Monday Night League - Our classic Co-ed summer league</h4>
-<ul><li>Who:
-    <ul><li>Adult Ultimate players of all skill levels and genders are invited to play.  There is limited space for both men and women in this league, so be sure to sign up early!
-    <li>Underage players may sign up only if they have a sponsor in the league.  See the “Under 18?” paragraph below for details. </ul>
+<ul>
+<li>Who:
+    <ul>
+    <li>Adult Ultimate players of all skill levels and genders are invited to play.  There is limited space for both men and women in this league, so be sure to sign up early!
+    <li>Underage players may sign up only if they have a sponsor in the league.  See the “Under 18?” paragraph below for details.
+    </ul>
 <li>What:
-    <ul><li>
+    <ul>
     <li> A 16 team mixed format league.
     <li> Teams are formed via a draft of all the registered players by volunteer captains.
     <li> The mixed format for this league is 5/2 or 4/3 - offense chooses.
     <li> Two rounds are played every Monday night.
     </ul>
 <li>Where:
-    <ul><li> Regular season games are played at fields in the Catonsville, Woodlawn, and Lansdowne areas.
+    <ul>
+    <li> Regular season games are played at fields in the Catonsville, Woodlawn, and Lansdowne areas.
     <li> Playoff games are also played in the same areas, but some games may be played farther afield (e.g. Columbia) in order to provide lighted fields for all games.
+    </ul>
 <li>When:
     <ul> 
     <li> Registration is held during the month of May.  The Deadline is May 27, but this league always fills up prior to the deadline!
