new waiver text

--- a/cmua/templates/register/index.html
+++ b/cmua/templates/register/index.html
@@ -136,39 +136,11 @@ href="mailto:cmua.summer08@comcast.net">email</a> or call Barry at 301-490-1860.
     {% endif %}
   {% endfor %}
     <tr><td colspan=3><br><br>
-- SUMMER LEAGUE WAIVER -<br>
-PLEASE READ THIS IMPORTANT INFORMATION AND SIGN BELOW<br>
-I acknowledge that an Ultimate event is an extreme test of a person's physical
-and mental limits and carries with it the potential for death, serious injury
-and property loss.  I HEREBY ASSUME THE RISKS OF PARTICIPATING IN ULTIMATE
-GAMES, TOURNAMENTS, PRACTICES AND OTHER EVENTS. I certify that I am physically
-fit, have trained sufficiently for participation in Ultimate events and have
-not been advised against participation in Ultimate events by a qualified
-medical person.  I acknowledge that my statements on this Acknowledgment Waiver
-and Release Form are being accepted by the Central Maryland Ultimate
-Association (CMUA) in consideration for allowing me to become a member of the
-CMUA and are being relied upon by the CMUA and the various event sponsors,
-organizers and administrators in permitting me to participate in any CMUA
-sanctioned tournament, practice or other event.<br><br>
+ACKNOWLEDGEMENT, WAIVER AND RELEASE OF LIABILITY:<br>
+I HEREBY CONFIRM PARTICIPANT IS IN GOOD HEALTH AND ABLE TO PARTICIPATE IN THE ACTIVITY, I ACKNOWLEDGE THE ACTIVITY MAY INVOLVE RISKS AND DANGER OF BODILY INJURY OR DEATH. I FULLY ACCEPT AND ACKNOWLEDGE THE ACTIVITY MAY INVOLVE RISK AND I HEREBY ASSUME THE RISK AND RESPONSIBILITY FOR ALL DANGERS AND RISKS ASSOCIATED WITH PARTICIPATION IN THE ACITIVITY. I acknowledge Baltimore County, Maryland, the recreation council, and their respective employees, directors, officers, volunteers, members and any other participant, entity, party or person involved in any regard with the activity or the activity premises, and their respective agents, personal representatives, heirs, employees, contractors, successors and assigns (each an "Activity Representative" and collectively the "Activity Representatives"), SHALL NOT BE RESPONSIBLE OR LIABLE IN ANY REGARD OR MANNER FOR ANY AND ALL PROPERTY DAMAGE OR BODILLY INJURY (INCLUDING SERIOUS PHYSICAL INJURY OR EVEN DEATH) INCURRED BY PARTICIPANT OR ANY PARTY RELATED THERETO AS A RESULT OF HIS/HER PARTICIPATION IN THE ACTIVITY.<br><br>
 
-In consideration for allowing
-me to become a member of the CMUA and allowing me to participate in CMUA
-sanctioned events, I hereby take the following action for myself, my executors,
-administrators, heirs, next of kin, successors and assigns: (a) I AGREE to
-abide by the rules of Ultimate and the Bylaws adopted by the CMUA and I
-acknowledge that my membership may be revoked or suspended for violations
-thereof; (b) I WAIVE, RELEASE AND DISCHARGE from any and all claims or
-liabilities for death, personal injury, property damage, theft or damages of
-any kind, which arise out of or relate to my participation in CMUA sanctioned
-events, THE FOLLOWING PERSONS OR ENTITIES: the CMUA, event sponsors, tournament
-directors, event producers, volunteers, all states, cities, counties or
-localities in which events or segments of events are held, and the officers,
-directors, employees, representatives and agents of any of the above; (c) I
-AGREE NOT TO SUE any of the persons or entities mentioned above for any of the
-claims or liabilities that I have waived, released or discharged herein; and
-(d) I INDEMNIFY AND HOLD HARMLESS the persons or entities mentioned above from
-any claims made or liabilities assessed against them as a result of my actions
-during a CMUA sanctioned event.<br><br>
+I have read, fully understand and hereby freely sign, approve of, and agree to the terms of the registration form. I HEREBY UNCONDITIONALLY RELEASE, DISCHARGE, COVENANT NOT TO SUE, WAIVE MY RIGHTS AND REMEDIES, AND AGREE TO HOLD HARMLESS THE ACTIVITY REPRESENTATIVE from any and all claims costs, demands, losses, damages, or expenses associated with, in whole or in part, participants involvement with the activity. I certify all answers and information provided on the registration form are to the best of my knowledge true and correct throughout the activity. I shall inform the recreation council, in writing, if any of the information provided in the registration form is incorrect or changes during the course of the activity. I understand Baltimore County and/or the recreation council do not perform criminal and/or background checks on activity representatives. I shall present a government-issued photo identification card including, but not limited to, my driver's license, passport, or United States Visa to the activity representative for review, if requested, at the time I submit this registration form to the recreation council.<br><br>
+
   <tr><td colspan=2>{{ form.i_agree_to_terms.label }}</td><td>{{ form.i_agree_to_terms }}</td></tr>
   <tr><td></td><td></td><td><input type="submit" value="Submit" /></td></tr>
 </table>
