finishing up the registration template

--- a/cmua/templates/register/index.html
+++ b/cmua/templates/register/index.html
@@ -115,9 +115,9 @@ acceptable. An adult player that the underage player just met at a pick-up
 game is not an appropriate sponsor. When registering, the underage player must
 list his/her sponsor on the "Optional Chum Declaration" line.  Additionally,
 he/she may not register online, since we require the parent's signature on the
-<a href="/static/2008Summer_Registration_Form.pdf">registration form.</a><br><br>
+<a href="/static/summer_2011_reg_form.pdf">registration form.</a><br><br>
 Red fields are required. Questions?  Contact us by <a 
-href="mailto:cmua.summer08@comcast.net">email</a> or call Barry at 301-490-1860.<br>
+href="mailto:cmua.summerleagues@comcast.net">email</a> or call Barry at 301-490-1860.<br>
 </p>
 
 <form action="/register/" method="POST">{% csrf_token %}
