some last changes before opening registration

--- a/cmua/templates/register/index.html
+++ b/cmua/templates/register/index.html
@@ -88,8 +88,8 @@ separate leagues this summer.  Two will be co-ed and the third will be a new gen
         <ul>
         <li> A computer will be used to perform the initial draft based on the self ratings provided on the registration forms.
         <li> A committee will review the draft and correct any obvious imbalances.
-        <li> One lengthy game is played each week, but an occasional double header may be required in order to make up a rained out game.
         </ul>
+    <li> One lengthy game is played each week, but an occasional double header may be required in order to make up a rained out game.
     </ul>
 <li>Where:
     <ul>
@@ -116,7 +116,7 @@ game is not an appropriate sponsor. When registering, the underage player must
 list his/her sponsor on the "Optional Chum Declaration" line.  Additionally,
 he/she may not register online, since we require the parent's signature on the
 <a href="/static/summer_2011_reg_form.pdf">registration form.</a><br><br>
-Red fields are required. Questions?  Contact us by <a 
+Starred fields are required. Questions?  Contact us by <a 
 href="mailto:cmua.summerleagues@comcast.net">email</a> or call Barry at 301-490-1860.<br>
 </p>
 
