--- a/cmua/templates/base.html
+++ b/cmua/templates/base.html
@@ -21,13 +21,13 @@
 		</div>
 		
 		<div id="logo">
-			<a href="#"><h1><strong>CMUA</strong></h1></a>
+			<a href="http://md-ultimate.org"><h1><strong>CMUA</strong></h1></a>
 		</div>
 			
 		<div id="navigation">
 			<ul id="nav">
 				<li id="events"><a href="#" class="on"><strong>Events</strong></a></li>
-				<li id="leagues"><a href="#" class="on"><strong>Leagues</strong></a></li>
+				<li id="leagues"><a href="/register" class="on"><strong>Leagues</strong></a></li>
 				<li id="directions"><a href="/directions" class="on"><strong>Directions</strong></a></li>
 				<li id="links"><a href="#" class="on"><strong>Links</strong></a></li>
 			</ul>
