making a line red, per request

--- a/cmua/templates/register/index.html
+++ b/cmua/templates/register/index.html
@@ -9,7 +9,7 @@
       <span class="errorlist">There were errors submitting your information; see below</span>
     {% endif %}
     <p>
-    IMPORTANT: THE MONDAY NIGHT SUMMER LEAGUE IS ALREADY FULL OF MEN. MALES CAN CONTINUE TO REGISTER FOR THAT LEAGUE, BUT THEY WILL BE PLACED ON A WAITING LIST AND WILL ONLY BE ADDED TO THE LEAGUE IF WE DECIDE TO EXPAND. NOTE THAT COUPLES WILL ALSO BE WAIT-LISTED AT THIS TIME.
+    <span style="color:red">IMPORTANT: THE MONDAY NIGHT SUMMER LEAGUE IS ALREADY FULL OF MEN.</span> MALES CAN CONTINUE TO REGISTER FOR THAT LEAGUE, BUT THEY WILL BE PLACED ON A WAITING LIST AND WILL ONLY BE ADDED TO THE LEAGUE IF WE DECIDE TO EXPAND. NOTE THAT COUPLES WILL ALSO BE WAIT-LISTED AT THIS TIME.
     <p>
 The Central Maryland Ultimate Association (CMUA) will be offering three 
 separate leagues this summer.  Two will be co-ed and the third will be a new gender-blind Open league.  All leagues are open to all skill levels. Participate in one or two or all of the leagues for the same price ($20.00).<br>
