changing legaues link to point to standings for now

--- a/cmua/templates/base.html
+++ b/cmua/templates/base.html
@@ -27,7 +27,7 @@
 		<div id="navigation">
 			<ul id="nav">
 				<li id="events"><a href="#" class="on"><strong>Events</strong></a></li>
-				<li id="leagues"><a href="/register" class="on"><strong>Leagues</strong></a></li>
+				<li id="leagues"><a href="/standings" class="on"><strong>Leagues</strong></a></li>
 				<li id="directions"><a href="/directions" class="on"><strong>Directions</strong></a></li>
 				<li id="links"><a href="#" class="on"><strong>Links</strong></a></li>
 			</ul>
