--- a/cmua/templates/scorereporter/standings.html
+++ b/cmua/templates/scorereporter/standings.html
@@ -7,14 +7,16 @@
     <table>
       <tr>
         <th>Team</th>
-        <th>W</th>
-        <th>L</th>
+        <th width=50>W</th>
+        <th width=50>L</th>
+        <th width=50>Point diff</th>
       </tr>
-    {% for pct, wins, losses, captains, team_name, id in standings %}
+    {% for pct, pd, wins, losses, captains, team_name, id in standings %}
       <tr>
         <td><!-- TODO: <a href="/team/{{ id }}">{{ captains }}</a>-->{{ captains }}</td>
-        <td>{{ wins }}</td>
-        <td>{{ losses }}</td>
+        <td style="text-align: center;">{{ wins }}</td>
+        <td style="text-align: center;">{{ losses }}</td>
+        <td style="text-align: center;">{{ pd }}</td>
       </tr>
     {% endfor %}
     </table>
